[gd_scene load_steps=12 format=3 uid="uid://dcyy4clc45qd4"]

[ext_resource type="Script" path="res://scripts/level_select.gd" id="1_3v5go"]
[ext_resource type="PackedScene" uid="uid://bu5yetb4nw650" path="res://scenes/world_select/level_icon.tscn" id="2_7ao5m"]
[ext_resource type="Texture2D" uid="uid://cajbwcjoy46i" path="res://assets/sprites/knight.png" id="3_pif2v"]
[ext_resource type="Script" path="res://scripts/animated_texture_rect.gd" id="4_c7wob"]
[ext_resource type="Texture2D" uid="uid://jd50uvl6nl7m" path="res://assets/sprites/switch_left.png" id="5_irq55"]
[ext_resource type="AudioStream" uid="uid://27werrxboiwp" path="res://assets/sounds/explosion_shock_down.wav" id="6_ew3k3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w6hob"]
atlas = ExtResource("3_pif2v")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_depus"]
atlas = ExtResource("3_pif2v")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltn7h"]
atlas = ExtResource("3_pif2v")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmyrl"]
atlas = ExtResource("3_pif2v")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f2i5n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6hob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_depus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltn7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmyrl")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3v5go")

[node name="1" parent="." node_paths=PackedStringArray("next_level_right") instance=ExtResource("2_7ao5m")]
offset_left = 128.0
offset_top = 448.0
offset_right = 192.0
offset_bottom = 512.0
next_level_right = NodePath("../2")

[node name="2" parent="." node_paths=PackedStringArray("next_level_left") instance=ExtResource("2_7ao5m")]
offset_left = 320.0
offset_top = 384.0
offset_right = 384.0
offset_bottom = 448.0
level_name = "2"
next_level_left = NodePath("../1")

[node name="PlayerIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
pivot_offset = Vector2(32, 32)
mouse_filter = 2
texture = SubResource("AtlasTexture_w6hob")
expand_mode = 2
script = ExtResource("4_c7wob")
sprites = SubResource("SpriteFrames_f2i5n")
autoplay = true
Animation = "default"
Frame = 0
"Speed Scale" = 1.0

[node name="TextureButton" type="TouchScreenButton" parent="."]
position = Vector2(32, 32)
texture_normal = ExtResource("5_irq55")
action = "dash"
visibility_mode = 1

[node name="SoundValid" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ew3k3")
bus = &"SFX"
